# url_shortener_test_task

./: .gitignore  README.md  pyproject.toml
app/: database.py  logger.py  main.py  routers.py  schemas.py  service.py  utils.py
tests/: conftest.py  test_api.py  test_utils.py
