[project]
name = "url-shortener-test-task"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
